--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -23,6 +23,10 @@
 body{
 	width: 100%;
 	height: 100vh;
+	background: url('../img/bg-fundo-game.svg');
+	background-position: left bottom;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .container {
@@ -35,10 +39,13 @@ body{
 	max-width: 1200px;
 	max-height: 800px;
 	position: relative;
+	margin-top: 8rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	border-radius:  5px;
+	background: #FFD189;
 	border: 1px red solid;
 }
 
@@ -66,7 +73,7 @@ body{
 	border-radius: 8px;
 	width: 35px;
 	height: 35px;
-	font-weight: 1000;
+	font-weight: 400;
 	font-size: 18px;
 	font-family: 'Maria Lucia', sans-serif;
 }
@@ -126,28 +133,20 @@ body{
 	margin-left: 5px;
 }
 
-.bg-fundo {
-	background: url('../img/bg-forca.jpg');
-	background-repeat: repeat-y;
-	background-size: cover;
-}
-
 .menu {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	flex-direction: row;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 300px;
+	width: 200px;
 	height: 300px;
-	border-radius: 10px;
 	transform: translate(-50%, -50%);
-	border: 1px rebeccapurple solid;
-	background: url("../img/bg-menu2.jpg") ;
+	background: url("../img/bg-menu.svg");
 	background-repeat: no-repeat;
-	background-position: center center;
+	background-size: contain;
 }
 
 .menu section {
