--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -23,36 +23,31 @@
 body{
 	width: 100%;
 	height: 100vh;
-	background: url('../img/bg-fundo-game.svg');
-	background-position: left bottom;
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-
-.container {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-}
-
-.display {
-	max-width: 1200px;
-	max-height: 800px;
-	position: relative;
-	margin-top: 8rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background: url('../img/bg-fundo-game.svg') no-repeat left bottom;
+}
+
+.container {
+	position: relative;
+	width: 900px;
+	min-width: 300px;
+	max-height: 600px;
+	margin: 2rem;
+	padding: 1em;
+	display: flex;
+	background: #a48209cc;
 	flex-direction: column;
-	border-radius:  5px;
-	background: #FFD189;
-	border: 1px red solid;
+	justify-content: center;
+	align-items: center;
+	border-radius: 10px;
 }
 
 .letra {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 30px;
 	height: 30px;
 	margin: 10px 2px 2px 2px;
@@ -63,9 +58,7 @@ body{
 
 #local-palavra {
 	display: inline-flex;
-	position: absolute;
-	top: 105px;
-	left: 70px;
+	border: 1px red solid;
 }
 
 .teclado button {
@@ -73,7 +66,7 @@ body{
 	border-radius: 8px;
 	width: 35px;
 	height: 35px;
-	font-weight: 400;
+	font-weight: 600;
 	font-size: 18px;
 	font-family: 'Maria Lucia', sans-serif;
 }
@@ -97,7 +90,6 @@ body{
 }
 
 .teclado {
-	border: 1px red solid;
 	margin: 100px 4px 4px 4px;
 }
 
@@ -113,7 +105,6 @@ body{
 	color: darkred;
 	text-shadow: black 0.1em 0.1em 0.2em;
 	font-size: 2.5rem;
-	
 }
 
 .ganhou {
@@ -124,9 +115,7 @@ body{
 
 #dicas {
 	display: flex;
-	position: absolute;
-	top: 1rem;
-	left: 30rem;
+
 }
 
 #dica {
@@ -134,15 +123,13 @@ body{
 }
 
 .menu {
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	flex-direction: row;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 200px;
-	height: 300px;
 	transform: translate(-50%, -50%);
 	background: url("../img/bg-menu.svg");
 	background-repeat: no-repeat;
@@ -151,4 +138,16 @@ body{
 
 .menu section {
 	position: relative;
+}
+
+.personagem {
+	display: flex;
+}
+
+.display {
+	display: flex;
+	align-content: center;
+	margin: 1em;
+	width: 300px;
+	min-width: 200px;
 }
