--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -20,6 +20,12 @@
 	box-sizing: border-box;
 }
 
+html {
+	width: 100%;
+	height: 100vh;
+	font-size: 62.5%;
+}
+
 body{
 	width: 100%;
 	height: 100vh;
@@ -30,18 +36,16 @@ body{
 }
 
 .container {
-	position: relative;
-	width: 900px;
-	min-width: 300px;
+	width: 100%;
 	max-height: 600px;
 	margin: 2rem;
-	padding: 1em;
+	padding: 1rem;
 	display: flex;
 	background: #a48209cc;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	border-radius: 10px;
+	border-radius: 1rem;
 }
 
 .letra {
@@ -123,7 +127,7 @@ body{
 }
 
 .menu {
-	display: none;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: row;
