--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -37,7 +37,7 @@ body{
 
 .container {
 	width: 100%;
-	max-height: 600px;
+	max-width: 600px;
 	margin: 2rem;
 	padding: 1rem;
 	display: flex;
@@ -62,7 +62,6 @@ body{
 
 #local-palavra {
 	display: inline-flex;
-	border: 1px red solid;
 }
 
 .teclado button {
@@ -119,10 +118,11 @@ body{
 
 #dicas {
 	display: flex;
+	font-size: 1.6rem;
 
 }
 
-#dica {
+#dicas #dica{
 	margin-left: 5px;
 }
 
