--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -27,10 +27,9 @@ html {
 }
 
 body{
-	width: 100%;
-	height: 100vh;
 	display: flex;
 	justify-content: center;
+	margin: auto;
 	align-items: center;
 	background: url('../img/bg-fundo-game.svg') no-repeat left bottom;
 }
@@ -38,6 +37,8 @@ body{
 .container {
 	width: 100%;
 	max-width: 600px;
+	height: 100%;
+	max-height: 100%;
 	margin: 2rem;
 	padding: 1rem;
 	display: flex;
@@ -46,6 +47,10 @@ body{
 	justify-content: center;
 	align-items: center;
 	border-radius: 1rem;
+}
+
+.container h1 {
+	font-size: 5.2rem;
 }
 
 .letra {
@@ -118,13 +123,15 @@ body{
 
 #dicas {
 	display: flex;
-	font-size: 1.6rem;
-
+	font-size: 2.2rem;
+	margin: 2px 10px;
+	padding: 5px;
 }
 
-#dicas #dica{
+#dicas div{
 	margin-left: 5px;
 }
+
 
 .menu {
 	display: flex;
