--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -154,7 +154,11 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	backdrop-filter: blur(3px) saturate(130%)
+	backdrop-filter: blur(4px);
+    -o-backdrop-filter: blur(4px);
+    -ms-backdrop-filter: blur(4px);
+    -moz-backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
 }
 
 .menu section{
