--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -30,17 +30,18 @@
 	box-sizing: border-box;
 }
 
-html {
-	width: 100%;
-	height: 100vh;
+html {	
 	font-size: 62.5%;
 	background: url('../img/bg-fundo-game.png') no-repeat left bottom;
 }
 
 body{
+	width: 100%;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 4rem 0;
 }
 
 .container {
@@ -154,7 +155,7 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	backdrop-filter: blur(3px) saturate(130%)
+	backdrop-filter: blur(3px);
 }
 
 .menu section{
@@ -254,5 +255,15 @@ body{
 		color: darkred;
 		text-shadow: black 0.1em 0.1em 0.2em;
 		font-size: 4.2rem;
+	}
+}
+
+@media (max-width: 375px) {
+	body {
+		padding: 0px;	
+	}
+	
+	.container{
+		border-radius: 0px;
 	}
 }
