--- a/css/estilo-jogo-da-forca.css
+++ b/css/estilo-jogo-da-forca.css
@@ -30,22 +30,23 @@
 	box-sizing: border-box;
 }
 
-html {
-	width: 100%;
-	height: 100vh;
+html {	
 	font-size: 62.5%;
 	background: url('../img/bg-fundo-game.png') no-repeat left bottom;
 }
 
 body{
+	width: 100%;
+	height: 100vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 4rem 0;
 }
 
 .container {
 	width: 100%;
-	max-width: 600px;
+	max-width: 768px;
 	height: 100%;
 	max-height: 100%;
 	margin: 2rem;
@@ -125,7 +126,7 @@ body{
 	font-family: 'Another Danger Slanted', sans-serif;
 	color: darkred;
 	text-shadow: black 0.1em 0.1em 0.2em;
-	font-size: 4.5rem;
+	font-size: 4.4rem;
 }
 
 .ganhou {
@@ -146,7 +147,6 @@ body{
 	margin-left: 5px;
 }
 
-
 .menu {
 	display: flex;
 	justify-content: center;
@@ -154,11 +154,7 @@ body{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	backdrop-filter: blur(4px);
-    -o-backdrop-filter: blur(4px);
-    -ms-backdrop-filter: blur(4px);
-    -moz-backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
+	backdrop-filter: blur(3px);
 }
 
 .menu section{
@@ -225,6 +221,59 @@ body{
 	margin: 1em;
 	width: 300px;
 	min-width: 200px;
+}
+
+@media (max-width: 320px) {
+	html {
+		font-size: 50.5%;
+	}
+
+	.letra {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 35px;
+		height: 35px;
+		margin: 8px 2px 2px 2px;
+		padding: 1px;
+		border-bottom: 5px gray solid;
+	}
+
+	.teclado button {
+		border-radius: 8px;
+		width: 28px;
+		height: 28px;
+	}
+
+	.teclado {
+	margin: 50px 4px 4px 4px;
+	}
+
+	.enforcado {
+		font-family: 'Another Danger Slanted', sans-serif;
+		color: darkred;
+		text-shadow: black 0.1em 0.1em 0.2em;
+		font-size: 4.2rem;
+	}
+}
+@media (max-width: 425px){
+	body {
+		padding: 0.5rem;	
+	}
+
+	.container{
+		border-radius: 1.6rem;
+	}
+}
+
+@media (max-width: 375px) {
+	body {
+		padding: 0px;	
+	}
+	
+	.container{
+		border-radius: 0px;
+	}
 }
 
 @media (max-width: 320px) {
